Updates from Overleaf

--- a/configurations/jlcode.sty
+++ b/configurations/jlcode.sty
@@ -106,7 +106,7 @@ TypeError,TypeMapEntry,TypeMapLevel,TypeName,TypeVar,TypedSlot,UDPSocket,UInt,%
 UInt128,UInt16,UInt32,UInt64,UInt8,UndefRefError,UndefVarError,UnicodeError,%
 UniformScaling,Union,UnionAll,UnitRange,Unsigned,UpperTriangular,Val,Vararg,%
 VecElement,VecOrMat,Vector,VersionNumber,Void,WeakKeyDict,WeakRef,WorkerConfig,%
-WorkerPool,AD%
+WorkerPool,AD,FAD,CJAD%
 },%
 %
 %
